@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-02T02:11:38Z",
-  "count" : 353,
+  "timestamp" : "2022-07-15T02:32:18Z",
+  "count" : 285,
   "count_minmax" : [ 120, 353 ],
-  "count_decinc" : [ -0, +353 ],
+  "count_decinc" : [ -68, +353 ],
   "uniques" : 3,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -0, +3 ]
