@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-14T16:40:45Z",
-  "count" : 247,
-  "count_minmax" : [ 120, 247 ],
-  "count_decinc" : [ -0, +247 ],
+  "timestamp" : "2022-07-15T02:32:18Z",
+  "count" : 353,
+  "count_minmax" : [ 120, 353 ],
+  "count_decinc" : [ -0, +353 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
