@@ -1,15 +1,10 @@
 {
-  "count": 4884,
+  "count": 4865,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 57,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 353,
+      "count": 285,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 247,
+      "count": 353,
       "uniques": 2
     }
   ]
